# menyoki

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  RELEASE.md  codecov.yml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  cd.yml  ci.yml  docker.yml
completions/: generate.sh  menyoki.bash  menyoki.elvish  menyoki.fish  menyoki.powershell  menyoki.zsh
config/: menyoki.cfg  menyoki.conf
man/: menyoki.1  menyoki.conf.5
src/: app.rs  cmd.rs  main.rs  settings.rs  util.rs
src/analyze/: mod.rs  settings.rs
src/anim/: decoder.rs  mod.rs  settings.rs
src/apng/: mod.rs
src/args/: matches.rs  mod.rs  parser.rs
src/edit/: mod.rs  settings.rs
src/encode/: gif.rs  mod.rs  settings.rs
src/encode/gif/: mod.rs  settings.rs
src/encode/jpg/: mod.rs
src/encode/png/: mod.rs  settings.rs
src/file/: format.rs  info.rs  mod.rs  settings.rs
src/gif/: decoder.rs  encoder.rs  mod.rs  settings.rs  ski.rs
src/image/: analyze.rs  bgr.rs  bgra.rs  edit.rs  geometry.rs  gif.rs  mod.rs  padding.rs  settings.rs
src/jpg/: mod.rs  settings.rs
src/png/: mod.rs  settings.rs
src/record/: fps.rs  mod.rs  settings.rs  test.rs  window.rs
src/test/: mod.rs
src/util/: args.rs  cmd.rs  command.rs  device.rs  file.rs  keys.rs  logger.rs  mod.rs  modifier.rs  parser.rs  settings.rs  state.rs
src/view/: mod.rs  settings.rs
src/window/: mod.rs  test.rs
src/ws/: mod.rs  window.rs
src/x11/: display.rs  image.rs  mod.rs  overlay.rs  settings.rs  window.rs
src/x11/image/: gif.rs  mod.rs
