[package]
name = "menyoki"
version = "1.3.0"
description = "Screen{shot,cast} and perform ImageOps on the command line"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/orhun/menyoki/blob/master/README.md"
homepage = "https://menyoki.cli.rs"
repository = "https://github.com/orhun/menyoki"
keywords = ["screenshot", "screencast", "gif", "recorder", "image"]
categories = ["multimedia", "graphics", "command-line-utilities"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2018"

[features]
default = ["ski"]
# enable gifski encoder
ski = ["gifski", "rgb", "imgref"]
# run window system tests
test-ws = []

[target.'cfg(windows)'.dependencies]
# Windows dependencies

[target.'cfg(target_os = "macos")'.dependencies]
# MacOS dependencies

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11 = { version = "2.18.2", features = ["xlib", "xrandr"] }

[dependencies]
# window system
device_query = "0.2.8"
ctrlc = { version = "3.1.8", features = ["termination"] }
# image operations
image = "0.23.14"
imgref = { version = "1.8.0", optional = true }
rgb = { version = "0.8.25", optional = true }
png = "0.16.8"
apng = "0.2.0"
gif = "0.11.1"
kamadak-exif = "0.5.3"
dominant_color = "0.3.0"
# utility
dirs = "3.0.1"
rust-ini = "0.16.1"
chrono = "0.4.19"
hex = "0.4.3"
bytesize = "1.0.1"
natord = "1.0.9"
colored = "2.0.0"
log = "0.4.14"
fern_colored = { version = "0.6.1", features = ["colored"] }

[dependencies.gifski]
version = "1.4.1"
default-features = false
optional = true

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
pretty_assertions = "0.7.1"

[profile.dev]
opt-level = 2
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
