[package]
name = "menyoki"
version = "1.5.4"
description = "Screen{shot,cast} and perform ImageOps on the command line"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/orhun/menyoki/blob/master/README.md"
homepage = "https://menyoki.cli.rs"
repository = "https://github.com/orhun/menyoki"
keywords = ["screenshot", "screencast", "gif", "recorder", "image"]
categories = ["multimedia", "graphics", "command-line-utilities"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2021"

[features]
default = ["ski"]
# enable gifski encoder
ski = ["gifski", "rgb", "imgref"]
# run window system tests
test-ws = []

# Windows dependencies
[target.'cfg(windows)'.dependencies]

# MacOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]

# Linux dependencies
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11 = { version = "2.19.1", features = ["xlib", "xrandr"] }

[dependencies]
# window system
device_query = "0.2.8"
ctrlc = { version = "3.2.1", features = ["termination"] }
# image operations
image = "0.23.14"
imgref = { version = "1.9.1", optional = true }
rgb = { version = "0.8.27", optional = true }
png = "0.17.2"
gif = "0.11.3"
kamadak-exif = "0.5.4"
dominant_color = "0.3.0"
viuer = "0.5.2"
# utility
dirs = "4.0.0"
rust-ini = "0.17.0"
chrono = "0.4.19"
hex = "0.4.3"
bytesize = "1.1.0"
natord = "1.0.9"
colored = "2.0.0"
log = "0.4.14"
fern_colored = { version = "0.6.1", features = ["colored"] }
thiserror = "1.0.30"

[dependencies.gifski]
version = "1.5.1"
default-features = false
optional = true

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
pretty_assertions = "1.0.0"

[profile.dev]
opt-level = 2
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
