[package]
name = "menyoki"
version = "1.6.1"
description = "Screen{shot,cast} and perform ImageOps on the command line"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/orhun/menyoki/blob/master/README.md"
homepage = "https://menyoki.cli.rs"
repository = "https://github.com/orhun/menyoki"
keywords = ["screenshot", "screencast", "gif", "recorder", "image"]
categories = ["multimedia", "graphics", "command-line-utilities"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2021"

[features]
default = ["ski"]
# enable gifski encoder
ski = ["gifski", "rgb", "imgref"]
# enable support for viewing sixel images
sixel = ["viuer/sixel"]
# run window system tests
test-ws = []

# Windows dependencies
[target.'cfg(windows)'.dependencies]

# MacOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]

# Linux dependencies
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xrandr"] }

[dependencies]
# window system
device_query = "1.1.2"
ctrlc = { version = "3.2.5", features = ["termination"] }
# image operations
image = "0.24.5"
imgref = { version = "1.9.4", optional = true }
rgb = { version = "0.8.36", optional = true }
png = "0.17.7"
gif = "0.12.0"
kamadak-exif = "0.5.5"
dominant_color = "0.3.0"
viuer = "0.6.2"
# utility
dirs = "4.0.0"
rust-ini = "0.18.0"
chrono = "0.4.23"
hex = "0.4.3"
bytesize = "1.2.0"
natord = "1.0.9"
colored = "2.0.0"
log = "0.4.17"
fern_colored = { version = "0.6.1", features = ["colored"] }
thiserror = "1.0.38"

[dependencies.gifski]
version = "1.10.0"
default-features = false
features = ["png"]
optional = true

[dependencies.clap]
version = "2.34.0"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.dev]
opt-level = 2
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
